--- a/src/pages/ProductManagementPage.css
+++ b/src/pages/ProductManagementPage.css
@@ -16,3 +16,24 @@
   font-size: 28px;
   padding: 235px;
 }
+
+.add-product-button {
+  padding: 10px 20px; 
+  background-color: #D83E23; 
+  color: white;
+  border: none;
+  border-radius: 5px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  margin-bottom: 20px;
+}
+
+.add-product-button:hover {
+  background-color: #b22f1c;
+}
+
+.add-product-button:focus {
+  outline: none;
+  box-shadow: 0 0 0 2px rgba(216, 62, 35, 0.5);
+}
