--- a/src/components/AddProduct.css
+++ b/src/components/AddProduct.css
@@ -33,6 +33,20 @@
     width: 100%;
 }
 
+.add-product-form input[type="checkbox"] {
+    margin-right: 10px;
+    width: auto;
+    transform: scale(1.2);
+}
+
+.add-product-form .checkbox-container {
+    display: flex;
+    align-items: center;
+    margin-bottom: 15px;
+    color: #333;
+    font-size: 16px;
+}
+
 .add-product-form input:focus,
 .add-product-form textarea:focus, 
 .add-product-form select:focus {
