--- a/src/components/EditProduct.css
+++ b/src/components/EditProduct.css
@@ -89,3 +89,21 @@
   border-color: #007bff;
   outline: none;
 }
+
+.checkbox-group {
+  display: flex;
+  align-items: center;
+  margin-bottom: 15px;
+}
+
+.checkbox-group label {
+  font-size: 16px;
+  margin-left: 10px;
+  color: #333;
+}
+
+.checkbox-group input[type="checkbox"] {
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
+}
