--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -2,15 +2,15 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  background-color: #f8f8f8;
   padding: 20px 40px 25px;
-  background-color: #fefefe;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.08);
   position: relative;
 }
 
 .header-title {
   text-decoration: none;
-  color: #E76C2C;
+  color: #4A334C;
   font-family: 'Playfair Display', serif;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2); 
   font-size: 35px;
@@ -18,7 +18,7 @@ header {
 }
 
 .header-title:hover {
-  color: #D83E23;
+  color: #3e1c42;
   transform: scale(1.05);
 }
 
@@ -30,7 +30,9 @@ header {
 }
 
 nav {
+  flex: 2;
   display: flex;
+  justify-content: center;
   gap: 40px;
 }
 
@@ -45,7 +47,7 @@ nav a {
 }
 
 nav a:hover {
-  color: #D83E23;
+  color: #4A334C;
 }
 
 nav a::after {
@@ -53,7 +55,7 @@ nav a::after {
   display: block;
   width: 0;
   height: 2px;
-  background: #D83E23;
+  background: #4A334C;
   transition: width 0.3s ease;
   position: absolute;
   left: 0;
@@ -62,4 +64,22 @@ nav a::after {
 
 nav a:hover::after {
   width: 100%;
+}
+
+.login-button {
+  text-decoration: none;
+  color: #555;
+  font-size: 18px;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
+  transition: color 0.3s ease, transform 0.3s ease; 
+  border: 1px solid #555;
+  padding: 2px;
+}
+
+.login-button:hover {
+  color: #4A334C;
+  border: 1px solid #4A334C;
+  transform: scale(1.05);
+  background-color: #efefef;
 }
