--- a/src/index.css
+++ b/src/index.css
@@ -4,5 +4,5 @@ body {
   font-family: 'Montserrat', sans-serif;
   background-image: linear-gradient(to right, #ffecd2 0%, #fcb69f 100%);
   color: #333;
-  margin: 0;
+  margin: 0px;
 }
