fixed about us part

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,5 +1,5 @@
 .footer {
-  background-color: #f8f9fa;
+  background-color: #F5F6FC;
   padding: 40px 30px;
   display: flex;
   justify-content: center;
