--- a/src/pages/FabricManagementPage.css
+++ b/src/pages/FabricManagementPage.css
@@ -1,7 +1,8 @@
 .product-management-container {
-  max-width: 800px;
+  max-width: 1200px;
   margin: 0 auto;
-  padding: 10px;
+  padding: 20px;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .product-list {
@@ -12,28 +13,42 @@
 
 .loading, .error {
   text-align: center;
-  color: #D83E23;
+  color: #4A334C;
   font-size: 28px;
-  padding: 235px;
+  padding: 50px;
 }
 
 .add-product-button {
-  padding: 10px 20px; 
-  background-color: #D83E23; 
+  display: flex;
+  align-items: center;
+  padding: 12px 25px;
+  background-color: #4A334C;
   color: white;
   border: none;
   border-radius: 5px;
-  font-size: 16px;
+  font-size: 18px;
+  font-weight: bold;
   cursor: pointer;
-  transition: background-color 0.3s ease;
-  margin-bottom: 20px;
+  transition: background-color 0.3s ease, transform 0.3s ease;
+  margin-bottom: 30px;
 }
 
 .add-product-button:hover {
-  background-color: #b22f1c;
+  background-color: #3e1c42;
+  transform: scale(1.05);
 }
 
-.add-product-button:focus {
-  outline: none;
-  box-shadow: 0 0 0 2px rgba(216, 62, 35, 0.5);
+h2 {
+  color: #3e1c42;
+  margin: 0;
+  font-size: 30px;
+  font-family: 'Playfair Display', serif;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
+}
+
+.header-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 20px;
 }
