--- a/src/components/AddFabric.css
+++ b/src/components/AddFabric.css
@@ -125,7 +125,7 @@
     color: #d9534f;
     margin: -40px;
     display: block;
-    text-align: center; 
+    text-align: left; 
 }
 
 .error::before {
