--- a/src/components/AddFabric.css
+++ b/src/components/AddFabric.css
@@ -7,13 +7,12 @@
     border-radius: 8px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
     padding: 20px;
-    margin: 10px 0;
     width: 100%;
-    max-width: 1200px;
+    max-width: 1160px;
 }
   
 .add-product-form h3 {
-    margin-bottom: 15px;
+    margin: 20px;
     margin-top: -5px;
     font-size: 24px;
     color: #333;
@@ -27,14 +26,22 @@
   
 .form-row {
     display: flex;
-    gap: 20px;
-    margin-bottom: 10px;
+    gap: 10px;
+    flex-wrap: wrap;
 }
-  
-.form-row input,
-.form-row select {
+
+.form-group {
     flex: 1;
+    min-width: 200px;
+    display: flex;
+    flex-direction: column;
 }
+ 
+  .add-product-form select,
+  .add-product-form input {
+    width: 100%;
+    box-sizing: border-box;
+  }  
   
 .add-product-form input,
 .add-product-form textarea,
@@ -46,6 +53,7 @@
     width: 100%;
     box-sizing: border-box;
     margin-bottom: 10px;
+    margin-top: 10px;
 }
   
 .add-product-form input:focus,
@@ -60,14 +68,14 @@
     flex-direction: column;
     gap: 10px;
     align-items: flex-start;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
     font-size: 16px;
     color: #333;
 }
 
 .add-product-form input[type="checkbox"] {
-    margin-right: 8px;
-    transform: scale(1.2);
+    width: 20px;
+    height: 20px;
     cursor: pointer;
     accent-color: #500153;
 }
@@ -77,13 +85,14 @@
     align-items: center;
     gap: 8px;
     cursor: pointer;
+    margin-top: 2px;
 }
   
 .add-product-form .button-row {
     display: flex;
     gap: 10px;
     justify-content: center;
-    margin-top: 10px;
+    margin-top: 5px;
 }
   
 .add-product-form button {
@@ -121,14 +130,26 @@
 /* error */
 
 .add-product-form .error {
-    font-size: 15px;
+    font-size: 14px;
     color: #d9534f;
-    margin: -40px;
-    display: block;
+    margin-top: -120px;
+    margin-left: -120px;
+    margin-bottom: -120px;
     text-align: left; 
 }
 
 .error::before {
-    content: "⚠ ";
-    font-weight: bold;
+  content: "⚠ ";
+}
+
+.error-row {
+  text-align: left;
+  font-size: 14px;
+  color: #d9534f;
+  margin-top: -2px;
+  margin-bottom: -2px;
+}
+
+.error-row::before {
+  content: "⚠ ";
 }
