added loading icon lol

--- a/src/pages/FabricManagementPage.css
+++ b/src/pages/FabricManagementPage.css
@@ -13,7 +13,7 @@
 
 .loading, .error {
   text-align: center;
-  color: #4A334C;
+  color: #d9534f;
   font-size: 28px;
   padding: 120px;
   margin: 40px;
