--- a/src/pages/FabricManagementPage.css
+++ b/src/pages/FabricManagementPage.css
@@ -77,3 +77,14 @@ h2 {
   text-align: center;
   color: #d9534f;
 }
+
+.feedback-message {
+  margin: 10px 0;
+  padding: 10px;
+  background-color: #d4edda;
+  color: #155724;
+  border: 1px solid #c3e6cb;
+  border-radius: 5px;
+  text-align: center;
+  font-size: 16px;
+}
