fixed edit user

--- a/src/pages/UserManagementPage.css
+++ b/src/pages/UserManagementPage.css
@@ -59,7 +59,7 @@ h1 {
   gap: 8px;
 }
 
-.delete-btn, .edit-btn, .promote-btn, .fire-btn {
+.delete-btn, .edit-btn {
   margin: 0;
   padding: 10px;
   display: flex;
@@ -81,20 +81,11 @@ h1 {
   background-color: #d32f2f;
 }
 
-.promote-btn {
+.edit-btn {
   background-color: #4caf50;
   color: white;
 }
 
-.promote-btn:hover {
+.edit-btn:hover {
   background-color: #388e3c;
-}
-
-.fire-btn {
-  background-color: #ff4500; 
-  color: white;
-}
-
-.fire-btn:hover {
-  background-color: #d13800;
 }
