--- a/src/pages/CartPage.css
+++ b/src/pages/CartPage.css
@@ -21,3 +21,14 @@
     font-size: 1.5rem;
     text-align: right;
   }
+
+  .empty-cart-message {
+    text-align: center;
+    margin-top: 50px;
+    font-size: 18px;
+    color: #555;
+  }
+  
+  .empty-cart-message p {
+    margin-bottom: 20px;
+  }
