--- a/src/pages/StatisticsPage.css
+++ b/src/pages/StatisticsPage.css
@@ -51,9 +51,9 @@
   }
   
   .chart {
-    width: 100%; /* Ensure chart takes up full width of its container */
-    height: 330px; /* Set a consistent height for the chart */
-    max-width: 600px; /* Restrict the maximum width of the chart */
+    width: 100%;
+    height: 330px;
+    max-width: 600px;
     margin: 0 auto;
     padding-bottom: 120px;
   }
