order flter and pages

--- a/src/components/FabricControlPanel.css
+++ b/src/components/FabricControlPanel.css
@@ -50,7 +50,7 @@
 
 .product-image {
   width: 100%;
-  height: 150px;
+  height: 200px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -62,17 +62,11 @@
   position: relative;
 }
 
-.placeholder-control-image img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  transition: transform 0.3s ease-in-out;
-}
-
-.placeholder-control-image {
+.placeholder-image {
   display: flex;
   align-items: center;
   justify-content: center;
   width: 100%;
   height: 100%;
+  padding: 200px;
 }
