--- a/src/pages/FabricManagementPage.css
+++ b/src/pages/FabricManagementPage.css
@@ -45,6 +45,7 @@ h2 {
   font-size: 30px;
   font-family: 'Playfair Display', serif;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
+  text-align: center;
 }
 
 .header-container {
@@ -52,20 +53,7 @@ h2 {
   align-items: center;
   justify-content: space-between;
   margin-bottom: 20px;
-}
-
-.filter-input {
-  padding: 10px;
-  border: 1px solid #ddd;
-  border-radius: 5px;
-  font-size: 16px;
-  margin-right: 10px;
-  width: 250px;
-}
-
-.filter-input:focus {
-  border-color: #4A334C;
-  outline: none;
+  margin-left: 70px;
 }
 
 .actions {
