--- a/src/pages/CartPage.css
+++ b/src/pages/CartPage.css
@@ -68,3 +68,17 @@
   .proceed-order-button:hover {
     background-color: #45a049;
   }  
+
+  .not-authorized {
+    background-color: #f8d7da;
+    color: #721c24;
+    border: 1px solid #f5c6cb; 
+    padding: 30px;
+    font-size: 18px;
+    font-weight: bold;
+    text-align: center;
+    border-radius: 8px;
+    margin-top: 140px;
+    margin-bottom: 140px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  }
